navbar que se oculta y backgrounds

--- a/css/_header.sass
+++ b/css/_header.sass
@@ -1,11 +1,15 @@
 .header
 	margin: auto
 	width: 100%
-	height: 100px
-	background: rgba(30, 40, 33, .8)
+	height: auto
+	position: fixed	
 	div
+		margin-top: 0px
+		-webkit-transition: .7s
+		transition: .7s
 		nav
+			background: rgba(244, 244, 244, .4)
 			div
 				a
 					img
-						max-width: 200px
+						max-width: 120px
