--- a/css/_seccion1.sass
+++ b/css/_seccion1.sass
@@ -1,5 +1,10 @@
 .seccion1
 	margin: auto
 	width: 100%
-	height: 500px
-	background: rgba(70, 245, 243, .8)
+	height: 700px
+	//background: rgb(0, 0, 0)
+	background: url("../img/fondo4.jpg")
+	background-size: auto
+	background-attachment: fixed
+	background-repeat: no-repeat
+	background-position: center
