--- a/css/_seccion2.sass
+++ b/css/_seccion2.sass
@@ -1,5 +1,10 @@
 .seccion2
 	margin: auto
 	width: 100%
-	height: 400px
-	background: rgba(130, 120, 233, .8)
+	height: 700px
+	background-color: rgba(130, 120, 233, .8)
+	background: url("../img/fondo.jpg")
+	background-size: auto
+	background-attachment: fixed
+	background-repeat: no-repeat
+	background-position: center
