--- a/css/_seccion3.sass
+++ b/css/_seccion3.sass
@@ -1,5 +1,10 @@
 .seccion3
 	margin: auto
 	width: 100%
-	height: 500px
-	background: rgba(230, 140, 233, .8)
+	height: 700px
+	background-color: rgba(230, 140, 233, .8)
+	background: url("../img/fondo4.jpg")
+	background-size: auto
+	background-attachment: fixed
+	background-repeat: no-repeat
+	background-position: center
