--- a/css/_seccion4.sass
+++ b/css/_seccion4.sass
@@ -1,5 +1,10 @@
 .seccion4
 	margin: auto
 	width: 100%
-	height: 500px
-	background: rgba(50, 170, 173, .8)
+	height: 700px
+	background-color: rgba(50, 170, 173, .8)
+	background: url("../img/fondo.jpg")
+	background-size: auto
+	background-attachment: fixed
+	background-repeat: no-repeat
+	background-position: center
