--- a/css/_header.sass
+++ b/css/_header.sass
@@ -6,10 +6,19 @@
 	div
 		margin-top: 0px
 		-webkit-transition: .7s
-		transition: .7s
+		transition: .5s
 		nav
-			background: rgba(244, 244, 244, .4)
+			background: rgba(35, 45, 105, .5)
+			//background: rgba(55, 170, 205, .5)
 			div
 				a
 					img
 						max-width: 120px
+				div
+					margin-right: 4rem
+					a
+						margin-left: 2rem
+						background: rgba(244, 244, 244, 0)
+						border-radius: .2rem
+						&:hover
+							background: rgba(244, 244, 244, .1)
