--- a/css/estilos.sass
+++ b/css/estilos.sass
@@ -11,8 +11,10 @@
 	padding: 0
 	margin: 0
 	box-sizing: border-box
+	font-size: 16px
 
 
 .body
 	width: auto
 	background: rgba(30, 200, 245, .9)
+	overflow: hidden
