--- a/css/_seccion1.sass
+++ b/css/_seccion1.sass
@@ -1,10 +1,19 @@
 .seccion1
 	margin: auto
 	width: 100%
-	height: 700px
+	height: 770px
 	//background: rgb(0, 0, 0)
 	background: url("../img/fondo4.jpg")
 	background-size: auto
 	background-attachment: fixed
 	background-repeat: no-repeat
 	background-position: center
+	div
+		div
+			.borde
+				border: solid 2px rgb(255, 255, 255)
+				padding-left: 1rem
+				padding-right: 1rem
+				padding-top: .4rem
+				padding-bottom: -.2rem
+				border-radius: 5px
