--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,12 +30,20 @@
 .seccion1 {
   margin: auto;
   width: 100%;
-  height: 700px;
+  height: 770px;
   background: url("../img/fondo4.jpg");
   background-size: auto;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
+}
+.seccion1 div div .borde {
+  border: solid 2px white;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.4rem;
+  padding-bottom: -0.2rem;
+  border-radius: 5px;
 }
 
 .seccion2 {
