seccion 2 en construccion

--- a/css/_seccion1.sass
+++ b/css/_seccion1.sass
@@ -1,7 +1,7 @@
 .seccion1
 	margin: auto
 	width: 100%
-	height: 770px
+	height: 100%
 	//background: rgb(0, 0, 0)
 	background: url("../img/fondo4.jpg")
 	background-size: auto
@@ -11,9 +11,18 @@
 	div
 		div
 			.borde
-				border: solid 2px rgb(255, 255, 255)
+				border: solid 4px rgb(255, 255, 255)
 				padding-left: 1rem
 				padding-right: 1rem
 				padding-top: .4rem
 				padding-bottom: -.2rem
 				border-radius: 5px
+				&:hover
+					border: solid 4px rgba(255, 255, 255, .0)
+					background: rgba(25, 155, 255, .4)
+				.contactanos
+					text-decoration: none
+					color: rgba(255, 255, 255, 1)
+					padding: 2rem
+					&:hover
+						color: rgba(255, 255, 255, 1)
