--- a/css/_seccion2.sass
+++ b/css/_seccion2.sass
@@ -1,10 +1,19 @@
 .seccion2
 	margin: auto
 	width: 100%
-	height: 700px
-	background-color: rgba(130, 120, 233, .8)
-	background: url("../img/fondo.jpg")
+	height: 100%
+	//background-color: rgba(230, 220, 233, 1)
+	background-color: rgba(255, 255, 255, 1)
+	//background: url("../img/fondo.jpg")
 	background-size: auto
 	background-attachment: fixed
 	background-repeat: no-repeat
 	background-position: center
+	div
+		div
+			div
+				.linea
+					max-width: auto
+					height: 0
+					border-radius: 2rem
+					border: 2px solid rgba(10, 240, 2, 1)
