--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,7 +30,7 @@
 .seccion1 {
   margin: auto;
   width: 100%;
-  height: 770px;
+  height: 100%;
   background: url("../img/fondo4.jpg");
   background-size: auto;
   background-attachment: fixed;
@@ -38,24 +38,41 @@
   background-position: center;
 }
 .seccion1 div div .borde {
-  border: solid 2px white;
+  border: solid 4px white;
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.4rem;
   padding-bottom: -0.2rem;
   border-radius: 5px;
 }
+.seccion1 div div .borde:hover {
+  border: solid 4px rgba(255, 255, 255, 0);
+  background: rgba(25, 155, 255, 0.4);
+}
+.seccion1 div div .borde .contactanos {
+  text-decoration: none;
+  color: white;
+  padding: 2rem;
+}
+.seccion1 div div .borde .contactanos:hover {
+  color: white;
+}
 
 .seccion2 {
   margin: auto;
   width: 100%;
-  height: 700px;
-  background-color: rgba(130, 120, 233, 0.8);
-  background: url("../img/fondo.jpg");
+  height: 100%;
+  background-color: white;
   background-size: auto;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
+}
+.seccion2 div div div .linea {
+  max-width: auto;
+  height: 0;
+  border-radius: 2rem;
+  border: 2px solid #0af002;
 }
 
 .seccion3 {
@@ -92,7 +109,6 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
   font-size: 16px;
 }
 
