seccion 2 casi completada

--- a/css/_header.sass
+++ b/css/_header.sass
@@ -3,12 +3,13 @@
 	width: 100%
 	height: auto
 	position: fixed	
+	z-index: 5
 	div
 		margin-top: 0px
 		-webkit-transition: .7s
 		transition: .5s
 		nav
-			background: rgba(35, 45, 105, .5)
+			background: rgba(2, 75, 105, .5)
 			//background: rgba(55, 170, 205, .5)
 			div
 				a
