--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: auto;
   position: fixed;
+  z-index: 5;
 }
 .header div {
   margin-top: 0px;
@@ -10,7 +11,7 @@
   transition: 0.5s;
 }
 .header div nav {
-  background: rgba(35, 45, 105, 0.5);
+  background: rgba(2, 75, 105, 0.5);
 }
 .header div nav div a img {
   max-width: 120px;
@@ -61,20 +62,84 @@
 .seccion2 {
   margin: auto;
   width: 100%;
-  height: 100%;
-  background-color: white;
+  height: auto;
+  background-color: rgba(255, 255, 255, 0.99);
   background-size: auto;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
 }
-.seccion2 div div div .linea {
+.seccion2 div .simbols {
+  transform: translate(8.3rem, 0);
+  z-index: 2;
+  height: auto;
+}
+.seccion2 div .simbols .bordes {
+  height: 140px;
+  width: 140px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  background: rgba(244, 244, 244, 0.99);
+  -webkit-box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
+  -moz-box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
+  box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
+}
+.seccion2 div .simbols .bordes .iconos {
+  font-size: 3rem;
+}
+.seccion2 div .simbols div .linea {
   max-width: auto;
   height: 0;
   border-radius: 2rem;
   border: 2px solid #0af002;
 }
+.seccion2 div .mj {
+  transform: translate(-7.7rem, 5rem);
+  z-index: 1;
+}
+.seccion2 div .mj .laptop {
+  max-width: 800px;
+  max-height: 550px;
+}
+.seccion2 div .contactanos {
+  text-decoration: none;
+  color: #14cd9b;
+  padding: 1rem;
+  border: solid 3px #14cd9b;
+  border-radius: 2px;
+}
+.seccion2 div .contactanos:hover {
+  background: #14cd9b;
+  color: white;
+  border: solid 3px #14cd9b;
+}
 
+@media only screen and (max-width: 600px) {
+  .seccion2 div .mj {
+    transform: translate(0rem, 0rem);
+    display: flex;
+    justify-content: center;
+    margin: auto;
+  }
+  .seccion2 div .mj .laptop {
+    width: 270px;
+    height: 170px;
+  }
+  .seccion2 div .simbols {
+    transform: translate(0rem, 0rem);
+  }
+  .seccion2 div .simbols .bordes {
+    height: 70px;
+    width: 70px;
+  }
+  .seccion2 div .simbols .bordes .iconos {
+    font-size: 1.4rem;
+  }
+  .seccion2 div .simbols .bordes .subico {
+    font-size: 0.8rem;
+  }
+}
 .seccion3 {
   margin: auto;
   width: 100%;
