--- a/css/_seccion1.sass
+++ b/css/_seccion1.sass
@@ -4,7 +4,7 @@
 	height: 100%
 	//background: rgb(0, 0, 0)
 	background: url("../img/fondo4.jpg")
-	background-size: auto
+	background-size: 100%
 	background-attachment: fixed
 	background-repeat: no-repeat
 	background-position: center
