--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,7 +33,7 @@
   width: 100%;
   height: 100%;
   background: url("../img/fondo4.jpg");
-  background-size: auto;
+  background-size: 100%;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
@@ -143,13 +143,28 @@
 .seccion3 {
   margin: auto;
   width: 100%;
-  height: 700px;
+  height: auto;
   background-color: rgba(230, 140, 233, 0.8);
   background: url("../img/fondo4.jpg");
-  background-size: auto;
+  background-size: 100%;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.carrucelI1 {
+  max-width: 200px;
+  max-height: 600px;
+}
+
+.carrucelI2 {
+  max-width: 900px;
+  max-height: 600px;
+}
+
+.carrucelI3 {
+  max-width: 900px;
+  max-height: 600px;
 }
 
 .seccion4 {
