--- a/css/_seccion2.sass
+++ b/css/_seccion2.sass
@@ -43,7 +43,11 @@
 			color: rgba(20, 205, 155, 1)
 			padding: 1rem
 			border: solid 3px rgba(20, 205, 155, 1)
+			background: rgba(244, 244, 244, .9)
 			border-radius: 2px
+			-webkit-box-shadow: 10px 10px 16px -6px rgba(0,0,0,0.43)
+			-moz-box-shadow: 10px 10px 16px -6px rgba(0,0,0,0.43)
+			box-shadow: 10px 10px 16px -6px rgba(0,0,0,0.43)
 			&:hover
 				background: rgba(20, 205, 155, 1)
 				color: rgba(255, 255, 255, 1)
