--- a/css/_seccion3.sass
+++ b/css/_seccion3.sass
@@ -4,7 +4,7 @@
 	height: auto
 	background-color: rgba(230, 140, 233, .8)
 	background: url("../img/fondo4.jpg")
-	background-size: 100%
+	background-size: auto
 	background-attachment: fixed
 	background-repeat: no-repeat
 	background-position: center
