--- a/css/_seccion4.sass
+++ b/css/_seccion4.sass
@@ -8,3 +8,20 @@
 	background-attachment: fixed
 	background-repeat: no-repeat
 	background-position: center
+	div
+		.tituloC
+			div
+				.titulo
+					font-size: 2rem
+				.iconoT
+					font-size: 2rem
+		.contactoT
+			background: rgba(222, 221, 213, .9)
+			-webkit-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
+			-moz-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
+			box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
+			.contactoC
+				.contacto
+					font-size: 1.4rem
+				.contactoI
+					font-size: 1.4rem
