--- a/css/estilos.css
+++ b/css/estilos.css
@@ -51,7 +51,7 @@
   width: 100%;
   height: 100%;
   background: url("../img/fondo4.jpg");
-  background-size: 100%;
+  background-size: auto;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
@@ -125,7 +125,11 @@
   color: #14cd9b;
   padding: 1rem;
   border: solid 3px #14cd9b;
+  background: rgba(244, 244, 244, 0.9);
   border-radius: 2px;
+  -webkit-box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
+  -moz-box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
+  box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
 }
 .seccion2 div .contactanos:hover {
   background: #14cd9b;
@@ -164,7 +168,7 @@
   height: auto;
   background-color: rgba(230, 140, 233, 0.8);
   background: url("../img/fondo4.jpg");
-  background-size: 100%;
+  background-size: auto;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
@@ -195,6 +199,24 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
+}
+.seccion4 div .tituloC div .titulo {
+  font-size: 2rem;
+}
+.seccion4 div .tituloC div .iconoT {
+  font-size: 2rem;
+}
+.seccion4 div .contactoT {
+  background: rgba(222, 221, 213, 0.9);
+  -webkit-box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
+  -moz-box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
+  box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
+}
+.seccion4 div .contactoT .contactoC .contacto {
+  font-size: 1.4rem;
+}
+.seccion4 div .contactoT .contactoC .contactoI {
+  font-size: 1.4rem;
 }
 
 .footer {
