--- a/css/_header.sass
+++ b/css/_header.sass
@@ -11,7 +11,9 @@
 		nav
 			background: rgba(2, 75, 105, .5)
 			//background: rgba(55, 170, 205, .5)
-			div
+			div	
+				.borde
+					width: 8.5rem
 				.bord
 					border: solid 4px rgba(244, 244, 244, .9)
 					display: flex
