--- a/css/_seccion4.sass
+++ b/css/_seccion4.sass
@@ -1,7 +1,7 @@
 .seccion4
 	margin: auto
 	width: 100%
-	height: 700px
+	height: auto
 	background-color: rgba(50, 170, 173, .8)
 	background: url("../img/fondo.jpg")
 	background-size: auto
@@ -15,7 +15,10 @@
 					font-size: 2rem
 				.iconoT
 					font-size: 2rem
+					color: #E56F38
 		.contactoT
+			width: 340px
+			height: 400px
 			background: rgba(222, 221, 213, .9)
 			-webkit-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
 			-moz-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
@@ -24,4 +27,41 @@
 				.contacto
 					font-size: 1.4rem
 				.contactoI
-					font-size: 1.4rem
+					font-size: 1.6rem
+				.signal
+					color: #8B88D7
+				.telegram
+					color: #0088cc
+				.telefono
+					color: #14703F
+				.correo
+					color: #344E64
+		.contactoT2
+			width: 620px
+			height: 270px
+			margin-top: 10rem
+			display: flex
+			justify-content: center
+			a
+				text-decoration: none
+				color: #0F4066
+				text-align: center
+				width: 170px
+				margin: auto
+				background: rgba(233, 233, 233, .9)
+				padding: 1rem
+				-webkit-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
+				-moz-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
+				box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
+				border-radius: 4px 4px 4px 4px
+				&:hover
+					-webkit-box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
+					-moz-box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
+					box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
+					transform: translate(4px, 4px)
+				.logoT
+					color: #0088cc
+					font-size: 3.5rem
+				.clickT
+					font-size: 2rem
+
