--- a/css/_seccion4.sass
+++ b/css/_seccion4.sass
@@ -18,8 +18,8 @@
 					color: #E56F38
 		.contactoT
 			width: 340px
-			height: 400px
-			background: rgba(222, 221, 213, .9)
+			height: 340px
+			background: rgba(222, 221, 213, .8)
 			-webkit-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
 			-moz-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
 			box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
@@ -39,14 +39,14 @@
 		.contactoT2
 			width: 620px
 			height: 270px
-			margin-top: 10rem
+			margin-top: 20rem
 			display: flex
 			justify-content: center
 			a
 				text-decoration: none
 				color: #0F4066
 				text-align: center
-				width: 170px
+				width: 177px
 				margin: auto
 				background: rgba(233, 233, 233, .9)
 				padding: 1rem
@@ -62,6 +62,10 @@
 				.logoT
 					color: #0088cc
 					font-size: 3.5rem
+				.logoForm
+					color: #7697B0
+				.logoCorreo
+					color: #154150
 				.clickT
 					font-size: 2rem
 
