--- a/css/_seccion2.sass
+++ b/css/_seccion2.sass
@@ -24,6 +24,12 @@
 				-webkit-box-shadow: 10px 10px 16px -6px rgba(0,0,0,0.43)
 				-moz-box-shadow: 10px 10px 16px -6px rgba(0,0,0,0.43)
 				box-shadow: 10px 10px 16px -6px rgba(0,0,0,0.43)
+				border-radius: 4px
+				&:hover
+					-webkit-box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
+					-moz-box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
+					box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
+					transform: translate(4px, 4px)
 				.iconos
 					font-size: 3rem
 			div
