--- a/css/estilos.css
+++ b/css/estilos.css
@@ -105,6 +105,13 @@
   -webkit-box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
   -moz-box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
   box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
+  border-radius: 4px;
+}
+.seccion2 div .simbols .bordes:hover {
+  -webkit-box-shadow: 1px 1px 1px -6px rgba(0, 0, 0, 0.73);
+  -moz-box-shadow: 1px 1px 1px -6px rgba(0, 0, 0, 0.73);
+  box-shadow: 1px 1px 1px -6px rgba(0, 0, 0, 0.73);
+  transform: translate(4px, 4px);
 }
 .seccion2 div .simbols .bordes .iconos {
   font-size: 3rem;
@@ -212,8 +219,8 @@
 }
 .seccion4 div .contactoT {
   width: 340px;
-  height: 400px;
-  background: rgba(222, 221, 213, 0.9);
+  height: 340px;
+  background: rgba(222, 221, 213, 0.8);
   -webkit-box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
   -moz-box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
   box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
@@ -239,7 +246,7 @@
 .seccion4 div .contactoT2 {
   width: 620px;
   height: 270px;
-  margin-top: 10rem;
+  margin-top: 20rem;
   display: flex;
   justify-content: center;
 }
@@ -247,7 +254,7 @@
   text-decoration: none;
   color: #0F4066;
   text-align: center;
-  width: 170px;
+  width: 177px;
   margin: auto;
   background: rgba(233, 233, 233, 0.9);
   padding: 1rem;
@@ -265,6 +272,12 @@
 .seccion4 div .contactoT2 a .logoT {
   color: #0088cc;
   font-size: 3.5rem;
+}
+.seccion4 div .contactoT2 a .logoForm {
+  color: #7697B0;
+}
+.seccion4 div .contactoT2 a .logoCorreo {
+  color: #154150;
 }
 .seccion4 div .contactoT2 a .clickT {
   font-size: 2rem;
