--- a/css/_footer.sass
+++ b/css/_footer.sass
@@ -1,5 +1,10 @@
 .footer
 	margin: auto
 	width: 100%
-	height: 100px
-	background: rgba(30, 40, 33, .8)
+	height: 100%
+	padding: 3rem
+	background: rgba(1, 5, 4, .85)
+	div
+		div 
+			.logoF
+				height: auto
