--- a/css/_seccion4.sass
+++ b/css/_seccion4.sass
@@ -12,10 +12,11 @@
 		.tituloC
 			div
 				.titulo
-					font-size: 2rem
+					font-size: 2.3rem
 				.iconoT
 					font-size: 2rem
-					color: #E56F38
+					color: #E84326
+					margin-top: .30rem
 		.contactoT
 			width: 340px
 			height: 340px
@@ -38,7 +39,7 @@
 					color: #344E64
 		.contactoT2
 			width: 620px
-			height: 270px
+			height: 210px
 			margin-top: 20rem
 			display: flex
 			justify-content: center
