fuente agregada y retoques al diseño

--- a/css/_seccion1.sass
+++ b/css/_seccion1.sass
@@ -14,8 +14,8 @@
 				border: solid 4px rgb(255, 255, 255)
 				padding-left: 1rem
 				padding-right: 1rem
-				padding-top: .4rem
-				padding-bottom: -.2rem
+				padding-top: 0rem
+				padding-bottom: 0rem
 				border-radius: 5px
 				&:hover
 					border: solid 4px rgba(255, 255, 255, .0)
@@ -23,6 +23,6 @@
 				.contactanos
 					text-decoration: none
 					color: rgba(255, 255, 255, 1)
-					padding: 2rem
+					padding: 1rem
 					&:hover
 						color: rgba(255, 255, 255, 1)
