--- a/css/_seccion2.sass
+++ b/css/_seccion2.sass
@@ -58,6 +58,10 @@
 				background: rgba(20, 205, 155, 1)
 				color: rgba(255, 255, 255, 1)
 				border: solid 3px rgba(20, 205, 155, 1)
+				-webkit-box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
+				-moz-box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
+				box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
+				transform: translate(5px, 5px)
 
 
 
