--- a/css/_seccion4.sass
+++ b/css/_seccion4.sass
@@ -11,15 +11,16 @@
 	div
 		.tituloC
 			div
-				.titulo
-					font-size: 2.3rem
-				.iconoT
-					font-size: 2rem
-					color: #E84326
-					margin-top: .30rem
+				div
+					.titulo
+						font-size: 2.3rem
+					.iconoT
+						font-size: 2rem
+						color: #E84326
+						margin-top: .70rem
 		.contactoT
 			width: 340px
-			height: 340px
+			height: 300px
 			background: rgba(222, 221, 213, .8)
 			-webkit-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
 			-moz-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
@@ -28,7 +29,7 @@
 				.contacto
 					font-size: 1.4rem
 				.contactoI
-					font-size: 1.6rem
+					font-size: 2rem
 				.signal
 					color: #8B88D7
 				.telegram
