--- a/css/estilos.css
+++ b/css/estilos.css
@@ -63,8 +63,8 @@
   border: solid 4px white;
   padding-left: 1rem;
   padding-right: 1rem;
-  padding-top: 0.4rem;
-  padding-bottom: -0.2rem;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
   border-radius: 5px;
 }
 .seccion1 div div .borde:hover {
@@ -74,7 +74,7 @@
 .seccion1 div div .borde .contactanos {
   text-decoration: none;
   color: white;
-  padding: 2rem;
+  padding: 1rem;
 }
 .seccion1 div div .borde .contactanos:hover {
   color: white;
@@ -145,6 +145,10 @@
   background: #14cd9b;
   color: white;
   border: solid 3px #14cd9b;
+  -webkit-box-shadow: 1px 1px 1px -6px rgba(0, 0, 0, 0.73);
+  -moz-box-shadow: 1px 1px 1px -6px rgba(0, 0, 0, 0.73);
+  box-shadow: 1px 1px 1px -6px rgba(0, 0, 0, 0.73);
+  transform: translate(5px, 5px);
 }
 
 @media only screen and (max-width: 600px) {
@@ -210,17 +214,17 @@
   background-repeat: no-repeat;
   background-position: center;
 }
-.seccion4 div .tituloC div .titulo {
+.seccion4 div .tituloC div div .titulo {
   font-size: 2.3rem;
 }
-.seccion4 div .tituloC div .iconoT {
+.seccion4 div .tituloC div div .iconoT {
   font-size: 2rem;
   color: #E84326;
-  margin-top: 0.3rem;
+  margin-top: 0.7rem;
 }
 .seccion4 div .contactoT {
   width: 340px;
-  height: 340px;
+  height: 300px;
   background: rgba(222, 221, 213, 0.8);
   -webkit-box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
   -moz-box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
@@ -230,7 +234,7 @@
   font-size: 1.4rem;
 }
 .seccion4 div .contactoT .contactoC .contactoI {
-  font-size: 1.6rem;
+  font-size: 2rem;
 }
 .seccion4 div .contactoT .contactoC .signal {
   color: #8B88D7;
@@ -298,7 +302,8 @@
 * {
   padding: 0;
   margin: 0;
-  font-size: 16px;
+  font-size: 15px;
+  font-family: "Sarabun", Helvetica;
 }
 
 .body {
