--- a/css/estilos.sass
+++ b/css/estilos.sass
@@ -11,7 +11,8 @@
 	padding: 0
 	margin: 0
 	//box-sizing: border-box
-	font-size: 16px
+	font-size: 15px
+	font-family: 'Sarabun', Helvetica
 
 
 .body
