--- a/pcontacto/css/_seccion1.sass
+++ b/pcontacto/css/_seccion1.sass
@@ -1,30 +1,31 @@
-.seccion1
+.seccion1, .seccion2
 	height: auto
 	.inside
-		height: 300px
+		height: auto
+		background: rgba(244, 244, 244, .92)
 		-webkit-box-shadow: 16px 16px 16px -6px rgba(0,0,0,0.53)
 		-moz-box-shadow: 16px 16px 16px -6px rgba(0,0,0,0.53)
 		box-shadow: 16px 16px 16px -6px rgba(0,0,0,0.53)
+		.contactoC
+			.contacto
+				font-size: 1.4rem
+			.contactoI
+				font-size: 2rem
+			.signal
+				color: #8B88D7
+			.telegram
+				color: #0088cc
+			.telefono
+				color: #14703F
+			.correo
+				color: #344E64
 	.contactoT
-			width: 240px
-			height: 300px
-			background: rgba(222, 221, 213, .8)
-			-webkit-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
-			-moz-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
-			box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
-			.contactoC
-				.contacto
-					font-size: 1.4rem
-				.contactoI
-					font-size: 2rem
-				.signal
-					color: #8B88D7
-				.telegram
-					color: #0088cc
-				.telefono
-					color: #14703F
-				.correo
-					color: #344E64
+		width: 340px
+		height: 400px
+		background: rgba(222, 221, 213, .8)
+		-webkit-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
+		-moz-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
+		box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
 	.contactoT2
 		width: 400px
 		height: 210px
@@ -56,3 +57,6 @@
 				color: #154150
 			.clickT
 				font-size: 2rem
+
+.contTitulo
+	background: rgba(243, 243, 243, .9)
