--- a/pcontacto/css/_seccion1.sass
+++ b/pcontacto/css/_seccion1.sass
@@ -21,14 +21,14 @@
 				color: #344E64
 	.contactoT
 		width: 200px
-		height: 200px
+		height: auto
 		background: rgba(252, 251, 253, .9)
 		-webkit-box-shadow: 12px 12px 12px -6px rgba(0,0,0,0.43)
 		-moz-box-shadow: 12px 12px 12px -6px rgba(0,0,0,0.43)
 		box-shadow: 12px 12px 12px -6px rgba(0,0,0,0.43)
 	.contactoT2
 		width: 210px
-		height: 210px
+		height: auto
 		display: flex
 		justify-content: center
 		a
