--- a/pcontacto/css/_seccion1.sass
+++ b/pcontacto/css/_seccion1.sass
@@ -21,14 +21,14 @@
 				color: #344E64
 	.contactoT
 		width: 200px
-		height: auto
+		height: 200px
 		background: rgba(252, 251, 253, .9)
 		-webkit-box-shadow: 12px 12px 12px -6px rgba(0,0,0,0.43)
 		-moz-box-shadow: 12px 12px 12px -6px rgba(0,0,0,0.43)
 		box-shadow: 12px 12px 12px -6px rgba(0,0,0,0.43)
 	.contactoT2
 		width: 210px
-		height: auto
+		height: 200px
 		display: flex
 		justify-content: center
 		a
@@ -63,3 +63,10 @@
 	-webkit-box-shadow: 12px 12px 26px -6px rgba(0,0,0,0.43)
 	-moz-box-shadow: 12px 12px 12px -6px rgba(0,0,0,0.43)
 	box-shadow: 12px 12px 12px -6px rgba(0,0,0,0.43)
+
+
+@media screen and (max-width: 500px)
+	.contacto
+		font-size: 0.7rem
+	.contactoI
+		font-size: 1.4rem
