--- a/pcontacto/css/estilos.css
+++ b/pcontacto/css/estilos.css
@@ -78,7 +78,7 @@
 }
 .seccion1 .contactoT, .seccion2 .contactoT {
   width: 200px;
-  height: auto;
+  height: 200px;
   background: rgba(252, 251, 253, 0.9);
   -webkit-box-shadow: 12px 12px 12px -6px rgba(0, 0, 0, 0.43);
   -moz-box-shadow: 12px 12px 12px -6px rgba(0, 0, 0, 0.43);
@@ -86,7 +86,7 @@
 }
 .seccion1 .contactoT2, .seccion2 .contactoT2 {
   width: 210px;
-  height: auto;
+  height: 200px;
   display: flex;
   justify-content: center;
 }
@@ -130,6 +130,15 @@
   box-shadow: 12px 12px 12px -6px rgba(0, 0, 0, 0.43);
 }
 
+@media screen and (max-width: 500px) {
+  .contacto {
+    font-size: 0.7rem;
+  }
+
+  .contactoI {
+    font-size: 1.4rem;
+  }
+}
 .footer {
   margin: auto;
   width: 100%;
