--- a/css/_seccion2.sass
+++ b/css/_seccion2.sass
@@ -1,7 +1,7 @@
 .seccion2
 	margin: auto
 	width: 100%
-	height: auto
+	height: 100%
 	//background-color: rgba(230, 220, 233, 1)
 	background-color: rgba(255, 255, 255, .99)
 	//background: url("../img/fondo.jpg")
@@ -44,6 +44,7 @@
 			.laptop
 				max-width: 800px
 				max-height: 550px
+				
 		.contactanos
 			text-decoration: none
 			color: rgba(20, 205, 155, 1)
