--- a/css/_header.sass
+++ b/css/_header.sass
@@ -32,9 +32,9 @@
 						.des
 							color: rgba(70, 180, 255, .9)
 				div
-					margin-right: 4rem
+					//margin-right: 4rem
 					a
-						margin-left: 2rem
+						//margin-left: 2rem
 						background: rgba(244, 244, 244, 0)
 						border-radius: .2rem
 						&:hover
