--- a/css/_seccion4.sass
+++ b/css/_seccion4.sass
@@ -1,7 +1,7 @@
 .seccion4
 	margin: auto
 	width: 100%
-	height: auto
+	height: 100%
 	background-color: rgba(50, 170, 173, .8)
 	background: url("../img/fondo.jpg")
 	background-size: auto
@@ -19,8 +19,10 @@
 						color: #E84326
 						margin-top: .70rem
 		.contactoT
-			width: 340px
-			height: 300px
+			margin: auto
+			width: auto
+			max-width: 350px
+			height: auto
 			background: rgba(222, 221, 213, .8)
 			-webkit-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
 			-moz-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
@@ -39,19 +41,23 @@
 				.correo
 					color: #344E64
 		.contactoT2
-			width: 620px
-			height: 210px
-			margin-top: 20rem
+			margin: auto
+			width: auto
+			height: auto
+			margin-top: 2rem
+			align-self: end
 			display: flex
 			justify-content: center
 			a
 				text-decoration: none
 				color: #0F4066
 				text-align: center
-				width: 177px
+				max-width: 177px
+				width: auto
 				margin: auto
 				background: rgba(233, 233, 233, .9)
 				padding: 1rem
+				margin: 1.2rem
 				-webkit-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
 				-moz-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
 				box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
