--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,11 +37,7 @@
 .header div nav div .bord .ram .des {
   color: rgba(70, 180, 255, 0.9);
 }
-.header div nav div div {
-  margin-right: 4rem;
-}
 .header div nav div div a {
-  margin-left: 2rem;
   background: rgba(244, 244, 244, 0);
   border-radius: 0.2rem;
 }
@@ -83,7 +79,7 @@
 .seccion2 {
   margin: auto;
   width: 100%;
-  height: auto;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.99);
   background-size: auto;
   background-attachment: fixed;
@@ -206,7 +202,7 @@
 .seccion4 {
   margin: auto;
   width: 100%;
-  height: auto;
+  height: 100%;
   background-color: rgba(50, 170, 173, 0.8);
   background: url("../img/fondo.jpg");
   background-size: auto;
@@ -223,8 +219,10 @@
   margin-top: 0.7rem;
 }
 .seccion4 div .contactoT {
-  width: 340px;
-  height: 300px;
+  margin: auto;
+  width: auto;
+  max-width: 350px;
+  height: auto;
   background: rgba(222, 221, 213, 0.8);
   -webkit-box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
   -moz-box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
@@ -249,9 +247,11 @@
   color: #344E64;
 }
 .seccion4 div .contactoT2 {
-  width: 620px;
-  height: 210px;
-  margin-top: 20rem;
+  margin: auto;
+  width: auto;
+  height: auto;
+  margin-top: 2rem;
+  align-self: end;
   display: flex;
   justify-content: center;
 }
@@ -259,10 +259,12 @@
   text-decoration: none;
   color: #0F4066;
   text-align: center;
-  width: 177px;
+  max-width: 177px;
+  width: auto;
   margin: auto;
   background: rgba(233, 233, 233, 0.9);
   padding: 1rem;
+  margin: 1.2rem;
   -webkit-box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
   -moz-box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
   box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
@@ -310,6 +312,16 @@
   width: auto;
   background: rgba(30, 200, 245, 0.9);
   overflow: hidden;
+}
+
+@media screen and (max-width: 450px) {
+  * {
+    font-size: 12px;
+  }
+
+  .contactoT2 {
+    margin-top: 0;
+  }
 }
 
 /*# sourceMappingURL=estilos.css.map */
