--- a/css/estilos.sass
+++ b/css/estilos.sass
@@ -19,3 +19,10 @@
 	width: auto
 	background: rgba(30, 200, 245, .9)
 	overflow: hidden
+
+@media screen and (max-width: 450px)
+	*
+		font-size: 12px
+
+	.contactoT2
+		margin-top: 0
