--- a/css/_seccion4.sass
+++ b/css/_seccion4.sass
@@ -3,7 +3,7 @@
 	width: 100%
 	height: 100%
 	background-color: rgba(50, 170, 173, .8)
-	background: url("../img/fondo.jpg")
+	background: url("../img/fondo5.jpg")
 	background-size: auto
 	background-attachment: fixed
 	background-repeat: no-repeat
