--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@
   transition: 0.5s;
 }
 .header div nav {
-  background: rgba(2, 75, 105, 0.5);
+  background: rgba(42, 175, 205, 0.9);
 }
 .header div nav div .borde {
   width: 8.5rem;
@@ -204,7 +204,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(50, 170, 173, 0.8);
-  background: url("../img/fondo.jpg");
+  background: url("../img/fondo5.jpg");
   background-size: auto;
   background-attachment: fixed;
   background-repeat: no-repeat;
