--- a/pportafolio/css/_seccion1.sass
+++ b/pportafolio/css/_seccion1.sass
@@ -1,4 +1,7 @@
 .seccion1
-	height: 700px
-	width: 100%
+	height: auto
+	width: auto
 	background: rgba(20, 180, 240, 1)
+	.galeria
+		display: grid
+		grid-gap: 1rem
