--- a/pportafolio/css/estilos.css
+++ b/pportafolio/css/estilos.css
@@ -13,9 +13,13 @@
 }
 
 .seccion1 {
-  height: 700px;
-  width: 100%;
+  height: auto;
+  width: auto;
   background: #14b4f0;
+}
+.seccion1 .galeria {
+  display: grid;
+  grid-gap: 1rem;
 }
 
 .seccion2 {
