--- a/pportafolio/css/_seccion1.sass
+++ b/pportafolio/css/_seccion1.sass
@@ -1,7 +1,81 @@
 .seccion1
 	height: auto
 	width: auto
-	background: rgba(20, 180, 240, 1)
+	background: rgba(244, 244, 244, .9)
+	background-size: 100%
+	background-attachment: fixed
+	background-position: center
 	.galeria
-		display: grid
-		grid-gap: 1rem
+		margin-top: 10rem
+		.uno
+			background: url("../../img/fondo4.jpg")
+			background-size: 600px 600px
+			background-position: center
+			transition: .5s
+			&:hover
+				-web-kit-transform: scale(1.3)
+				transform: scale(1.1)
+				filter: blur(1px)
+		.dos
+			background: url("../../img/fondo4.jpg")
+			background-size: 600px 600px
+			background-position: center
+			transition: .5s
+			&:hover
+				-web-kit-transform: scale(1.3)
+				transform: scale(1.1)
+				filter: blur(1px)
+		.tres
+			background: url("../../img/fondo4.jpg")
+			background-size: 600px 600px
+			background-position: center
+			transition: .5s
+			&:hover
+				-web-kit-transform: scale(1.3)
+				transform: scale(1.1)
+				filter: blur(1px)
+		.cuatro
+			background: url("../../img/fondo4.jpg")
+			background-size: 600px 600px
+			background-position: center
+			transition: .5s
+			&:hover
+				-web-kit-transform: scale(1.3)
+				transform: scale(1.1)
+				filter: blur(1px)
+		.cinco
+			background: url("../../img/fondo4.jpg")
+			background-size: 600px 600px
+			background-position: center
+			transition: .5s
+			&:hover
+				-web-kit-transform: scale(1.3)
+				transform: scale(1.1)
+				filter: blur(1px)
+		.seis
+			background: url("../../img/fondo4.jpg")
+			background-size: 600px 600px
+			background-position: center
+			transition: .5s
+			&:hover
+				-web-kit-transform: scale(1.3)
+				transform: scale(1.1)
+				filter: blur(1px)
+		.siete
+			background: url("../../img/fondo4.jpg")
+			background-size: 600px 600px
+			background-position: center
+			transition: .5s
+			&:hover
+				-web-kit-transform: scale(1.3)
+				transform: scale(1.1)
+				filter: blur(1px)
+		.ocho
+			background: url("../../img/fondo4.jpg")
+			background-size: 600px 600px
+			background-position: center
+			transition: .5s
+			&:hover
+				-web-kit-transform: scale(1.3)
+				transform: scale(1.1)
+				filter: blur(1px)
