--- a/pportafolio/css/estilos.css
+++ b/pportafolio/css/estilos.css
@@ -15,11 +15,101 @@
 .seccion1 {
   height: auto;
   width: auto;
-  background: #14b4f0;
+  background: rgba(244, 244, 244, 0.9);
+  background-size: 100%;
+  background-attachment: fixed;
+  background-position: center;
 }
 .seccion1 .galeria {
-  display: grid;
-  grid-gap: 1rem;
+  margin-top: 10rem;
+}
+.seccion1 .galeria .uno {
+  background: url("../../img/fondo4.jpg");
+  background-size: 600px 600px;
+  background-position: center;
+  transition: 0.5s;
+}
+.seccion1 .galeria .uno:hover {
+  -web-kit-transform: scale(1.3);
+  transform: scale(1.1);
+  filter: blur(1px);
+}
+.seccion1 .galeria .dos {
+  background: url("../../img/fondo4.jpg");
+  background-size: 600px 600px;
+  background-position: center;
+  transition: 0.5s;
+}
+.seccion1 .galeria .dos:hover {
+  -web-kit-transform: scale(1.3);
+  transform: scale(1.1);
+  filter: blur(1px);
+}
+.seccion1 .galeria .tres {
+  background: url("../../img/fondo4.jpg");
+  background-size: 600px 600px;
+  background-position: center;
+  transition: 0.5s;
+}
+.seccion1 .galeria .tres:hover {
+  -web-kit-transform: scale(1.3);
+  transform: scale(1.1);
+  filter: blur(1px);
+}
+.seccion1 .galeria .cuatro {
+  background: url("../../img/fondo4.jpg");
+  background-size: 600px 600px;
+  background-position: center;
+  transition: 0.5s;
+}
+.seccion1 .galeria .cuatro:hover {
+  -web-kit-transform: scale(1.3);
+  transform: scale(1.1);
+  filter: blur(1px);
+}
+.seccion1 .galeria .cinco {
+  background: url("../../img/fondo4.jpg");
+  background-size: 600px 600px;
+  background-position: center;
+  transition: 0.5s;
+}
+.seccion1 .galeria .cinco:hover {
+  -web-kit-transform: scale(1.3);
+  transform: scale(1.1);
+  filter: blur(1px);
+}
+.seccion1 .galeria .seis {
+  background: url("../../img/fondo4.jpg");
+  background-size: 600px 600px;
+  background-position: center;
+  transition: 0.5s;
+}
+.seccion1 .galeria .seis:hover {
+  -web-kit-transform: scale(1.3);
+  transform: scale(1.1);
+  filter: blur(1px);
+}
+.seccion1 .galeria .siete {
+  background: url("../../img/fondo4.jpg");
+  background-size: 600px 600px;
+  background-position: center;
+  transition: 0.5s;
+}
+.seccion1 .galeria .siete:hover {
+  -web-kit-transform: scale(1.3);
+  transform: scale(1.1);
+  filter: blur(1px);
+}
+.seccion1 .galeria .ocho {
+  background: url("../../img/fondo4.jpg");
+  background-size: 600px 600px;
+  background-position: center;
+  transition: 0.5s;
+}
+.seccion1 .galeria .ocho:hover {
+  -web-kit-transform: scale(1.3);
+  transform: scale(1.1);
+  filter: blur(1px);
 }
 
 .seccion2 {
