--- a/pportafolio/css/estilos.sass
+++ b/pportafolio/css/estilos.sass
@@ -14,5 +14,9 @@
 
 .body
 	width: auto
-	background: rgba(30, 200, 245, .9)
+	background: url("../../img/fondo2.jpg")
 	overflow: hidden
+
+@media screen and (max-width: 400px)
+	*
+		font-size: 12px
