--- a/pportafolio/css/_footer.sass
+++ b/pportafolio/css/_footer.sass
@@ -1,10 +1,10 @@
 .footer
 	margin: auto
 	width: 100%
-	height: 100%
+	height: auto
 	padding: 3rem
-	background: rgba(1, 5, 4, .87)
+	background: rgba(1, 5, 4, .7)
 	div
 		.logof
-			height: 70px
-			width: 170px
+			height: auto
+			width: auto
