--- a/pportafolio/css/_header.sass
+++ b/pportafolio/css/_header.sass
@@ -1,7 +1,7 @@
 .header
 	margin: auto
 	width: 100%
-	max-height: 100px
+	height: auto
 	position: fixed
 	z-index: 5
 	background: rgba(2, 75, 105, .5)
@@ -9,3 +9,7 @@
 		margin-top: 0px
 		-webkit-transition: .7s
 		transition: .7s
+		nav
+			div
+				a
+					img
