--- a/pportafolio/css/_seccion1.sass
+++ b/pportafolio/css/_seccion1.sass
@@ -1,81 +1,89 @@
 .seccion1
 	height: auto
 	width: auto
-	background: rgba(244, 244, 244, .9)
-	background-size: 100%
-	background-attachment: fixed
+	min-height: 700px
+	background: rgba(255, 255, 255, .1)
+	background-size: auto
 	background-position: center
+	.tituloP
+		section
+			.titulo
+				background: rgba(14, 43, 73, .7)
+				color: rgba(243, 243, 243, .9)
+				i
+					color: rgba(243, 243, 243, .9)
+					font-size: 2rem
 	.galeria
 		margin-top: 10rem
 		.uno
-			background: url("../../img/fondo4.jpg")
-			background-size: 600px 600px
+			background: url("../../img/uno.png")
+			background-size: 400px 200px
 			background-position: center
+			background-repeat: no-repeat
 			transition: .5s
 			&:hover
 				-web-kit-transform: scale(1.3)
-				transform: scale(1.1)
-				filter: blur(1px)
+				transform: scale(1.3)
 		.dos
-			background: url("../../img/fondo4.jpg")
-			background-size: 600px 600px
+			background: url("../../img/dos.png")
+			background-size: 400px 200px
 			background-position: center
+			background-repeat: no-repeat
 			transition: .5s
 			&:hover
 				-web-kit-transform: scale(1.3)
-				transform: scale(1.1)
-				filter: blur(1px)
+				transform: scale(1.3)
 		.tres
-			background: url("../../img/fondo4.jpg")
-			background-size: 600px 600px
+			background: url("../../img/tres.png")
+			background-size: 400px 200px
 			background-position: center
+			background-repeat: no-repeat
 			transition: .5s
 			&:hover
 				-web-kit-transform: scale(1.3)
-				transform: scale(1.1)
-				filter: blur(1px)
+				transform: scale(1.3)
 		.cuatro
-			background: url("../../img/fondo4.jpg")
-			background-size: 600px 600px
+			background: url("../../img/cuatro.png")
+			background-size: 400px 200px
 			background-position: center
+			background-repeat: no-repeat
 			transition: .5s
 			&:hover
 				-web-kit-transform: scale(1.3)
-				transform: scale(1.1)
-				filter: blur(1px)
+				transform: scale(1.3)
 		.cinco
-			background: url("../../img/fondo4.jpg")
-			background-size: 600px 600px
+			background: url("../../img/cinco.png")
+			background-size: 400px 200px
 			background-position: center
+			background-repeat: no-repeat
 			transition: .5s
 			&:hover
 				-web-kit-transform: scale(1.3)
-				transform: scale(1.1)
-				filter: blur(1px)
+				transform: scale(1.3)
 		.seis
-			background: url("../../img/fondo4.jpg")
-			background-size: 600px 600px
+			background: url("../../img/seis.png")
+			background-size: 400px 200px
 			background-position: center
+			background-repeat: no-repeat
 			transition: .5s
 			&:hover
 				-web-kit-transform: scale(1.3)
-				transform: scale(1.1)
-				filter: blur(1px)
+				transform: scale(1.3)
 		.siete
-			background: url("../../img/fondo4.jpg")
-			background-size: 600px 600px
+			background: url("../../img/siete.png")
+			background-size: 400px 200px
 			background-position: center
+			background-repeat: no-repeat
 			transition: .5s
 			&:hover
 				-web-kit-transform: scale(1.3)
-				transform: scale(1.1)
-				filter: blur(1px)
+				transform: scale(1.3)
 		.ocho
-			background: url("../../img/fondo4.jpg")
-			background-size: 600px 600px
+			background: url("../../img/ocho.png")
+			background-size: 400px 200px
 			background-position: center
+			background-repeat: no-repeat
 			transition: .5s
 			&:hover
 				-web-kit-transform: scale(1.3)
-				transform: scale(1.1)
-				filter: blur(1px)
+				transform: scale(1.3)
