--- a/pportafolio/css/estilos.css
+++ b/pportafolio/css/estilos.css
@@ -1,7 +1,7 @@
 .header {
   margin: auto;
   width: 100%;
-  max-height: 100px;
+  height: auto;
   position: fixed;
   z-index: 5;
   background: rgba(2, 75, 105, 0.5);
@@ -11,105 +11,112 @@
   -webkit-transition: 0.7s;
   transition: 0.7s;
 }
-
 .seccion1 {
   height: auto;
   width: auto;
-  background: rgba(244, 244, 244, 0.9);
-  background-size: 100%;
-  background-attachment: fixed;
+  min-height: 700px;
+  background: rgba(255, 255, 255, 0.1);
+  background-size: auto;
   background-position: center;
+}
+.seccion1 .tituloP section .titulo {
+  background: rgba(14, 43, 73, 0.7);
+  color: rgba(243, 243, 243, 0.9);
+}
+.seccion1 .tituloP section .titulo i {
+  color: rgba(243, 243, 243, 0.9);
+  font-size: 2rem;
 }
 .seccion1 .galeria {
   margin-top: 10rem;
 }
 .seccion1 .galeria .uno {
-  background: url("../../img/fondo4.jpg");
-  background-size: 600px 600px;
+  background: url("../../img/uno.png");
+  background-size: 400px 200px;
   background-position: center;
+  background-repeat: no-repeat;
   transition: 0.5s;
 }
 .seccion1 .galeria .uno:hover {
   -web-kit-transform: scale(1.3);
-  transform: scale(1.1);
-  filter: blur(1px);
+  transform: scale(1.3);
 }
 .seccion1 .galeria .dos {
-  background: url("../../img/fondo4.jpg");
-  background-size: 600px 600px;
+  background: url("../../img/dos.png");
+  background-size: 400px 200px;
   background-position: center;
+  background-repeat: no-repeat;
   transition: 0.5s;
 }
 .seccion1 .galeria .dos:hover {
   -web-kit-transform: scale(1.3);
-  transform: scale(1.1);
-  filter: blur(1px);
+  transform: scale(1.3);
 }
 .seccion1 .galeria .tres {
-  background: url("../../img/fondo4.jpg");
-  background-size: 600px 600px;
+  background: url("../../img/tres.png");
+  background-size: 400px 200px;
   background-position: center;
+  background-repeat: no-repeat;
   transition: 0.5s;
 }
 .seccion1 .galeria .tres:hover {
   -web-kit-transform: scale(1.3);
-  transform: scale(1.1);
-  filter: blur(1px);
+  transform: scale(1.3);
 }
 .seccion1 .galeria .cuatro {
-  background: url("../../img/fondo4.jpg");
-  background-size: 600px 600px;
+  background: url("../../img/cuatro.png");
+  background-size: 400px 200px;
   background-position: center;
+  background-repeat: no-repeat;
   transition: 0.5s;
 }
 .seccion1 .galeria .cuatro:hover {
   -web-kit-transform: scale(1.3);
-  transform: scale(1.1);
-  filter: blur(1px);
+  transform: scale(1.3);
 }
 .seccion1 .galeria .cinco {
-  background: url("../../img/fondo4.jpg");
-  background-size: 600px 600px;
+  background: url("../../img/cinco.png");
+  background-size: 400px 200px;
   background-position: center;
+  background-repeat: no-repeat;
   transition: 0.5s;
 }
 .seccion1 .galeria .cinco:hover {
   -web-kit-transform: scale(1.3);
-  transform: scale(1.1);
-  filter: blur(1px);
+  transform: scale(1.3);
 }
 .seccion1 .galeria .seis {
-  background: url("../../img/fondo4.jpg");
-  background-size: 600px 600px;
+  background: url("../../img/seis.png");
+  background-size: 400px 200px;
   background-position: center;
+  background-repeat: no-repeat;
   transition: 0.5s;
 }
 .seccion1 .galeria .seis:hover {
   -web-kit-transform: scale(1.3);
-  transform: scale(1.1);
-  filter: blur(1px);
+  transform: scale(1.3);
 }
 .seccion1 .galeria .siete {
-  background: url("../../img/fondo4.jpg");
-  background-size: 600px 600px;
+  background: url("../../img/siete.png");
+  background-size: 400px 200px;
   background-position: center;
+  background-repeat: no-repeat;
   transition: 0.5s;
 }
 .seccion1 .galeria .siete:hover {
   -web-kit-transform: scale(1.3);
-  transform: scale(1.1);
-  filter: blur(1px);
+  transform: scale(1.3);
 }
 .seccion1 .galeria .ocho {
-  background: url("../../img/fondo4.jpg");
-  background-size: 600px 600px;
+  background: url("../../img/ocho.png");
+  background-size: 400px 200px;
   background-position: center;
+  background-repeat: no-repeat;
   transition: 0.5s;
 }
 .seccion1 .galeria .ocho:hover {
   -web-kit-transform: scale(1.3);
-  transform: scale(1.1);
-  filter: blur(1px);
+  transform: scale(1.3);
 }
 
 .seccion2 {
@@ -121,13 +128,13 @@
 .footer {
   margin: auto;
   width: 100%;
-  height: 100%;
+  height: auto;
   padding: 3rem;
-  background: rgba(1, 5, 4, 0.87);
+  background: rgba(1, 5, 4, 0.7);
 }
 .footer div .logof {
-  height: 70px;
-  width: 170px;
+  height: auto;
+  width: auto;
 }
 
 * {
@@ -140,8 +147,14 @@
 
 .body {
   width: auto;
-  background: rgba(30, 200, 245, 0.9);
+  background: url("../../img/fondo2.jpg");
   overflow: hidden;
+}
+
+@media screen and (max-width: 400px) {
+  * {
+    font-size: 12px;
+  }
 }
 
 /*# sourceMappingURL=estilos.css.map */
