pagina version casi final

--- a/pcontacto/css/_header.sass
+++ b/pcontacto/css/_header.sass
@@ -1,7 +1,7 @@
 .header
 	margin: auto
 	width: 100%
-	max-height: 100px
+	height: auto
 	z-index: 5
 	div
 		margin-top: 0px
@@ -31,9 +31,7 @@
 						.des
 							color: rgba(70, 180, 255, .9)
 				div
-					margin-right: 4rem
 					a
-						margin-left: 2rem
 						background: rgba(244, 244, 244, 0)
 						border-radius: .2rem
 						&:hover
