--- a/pcontacto/css/_seccion1.sass
+++ b/pcontacto/css/_seccion1.sass
@@ -65,8 +65,12 @@
 	box-shadow: 12px 12px 12px -6px rgba(0,0,0,0.43)
 
 
-@media screen and (max-width: 500px)
-	.contacto
-		font-size: 0.7rem		
-	.contactoI
-		font-size: 1.4rem
+@media screen and (max-width: 400px)
+	.seccion1 
+		.inside 
+			.contactoC
+				font-size: 14px
+				.contacto
+					font-size: 14px
+				.contactoI
+					font-size: 14px
