--- a/css/_seccion4.sass
+++ b/css/_seccion4.sass
@@ -13,7 +13,7 @@
 			div
 				div
 					.titulo
-						font-size: 2.3rem
+						font-size: 1.8rem
 					.iconoT
 						font-size: 2rem
 						color: #E84326
@@ -77,3 +77,12 @@
 				.clickT
 					font-size: 2rem
 
+
+@media screen and (max-width: 400px)
+	.seccion4 
+		div 
+			.contactoT 
+				.contactoC
+					font-size: 14px
+					.contacto
+						font-size: 14px
