--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@
   transition: 0.5s;
 }
 .header div nav {
-  background: rgba(42, 175, 205, 0.57);
+  background: rgba(2, 75, 105, 0.99);
 }
 .header div nav div .borde {
   width: 8.5rem;
@@ -211,7 +211,7 @@
   background-position: center;
 }
 .seccion4 div .tituloC div div .titulo {
-  font-size: 2.3rem;
+  font-size: 1.8rem;
 }
 .seccion4 div .tituloC div div .iconoT {
   font-size: 2rem;
@@ -290,6 +290,14 @@
   font-size: 2rem;
 }
 
+@media screen and (max-width: 400px) {
+  .seccion4 div .contactoT .contactoC {
+    font-size: 14px;
+  }
+  .seccion4 div .contactoT .contactoC .contacto {
+    font-size: 14px;
+  }
+}
 .footer {
   margin: auto;
   width: 100%;
