--- a/pportafolio/css/estilos.sass
+++ b/pportafolio/css/estilos.sass
@@ -16,6 +16,8 @@
 	width: auto
 	background: url("../../img/fondo2.jpg")
 	overflow: hidden
+	background-attachment: fixed
+	background-size: 100%
 
 @media screen and (max-width: 400px)
 	*
