--- a/pportafolio/css/_seccion1.sass
+++ b/pportafolio/css/_seccion1.sass
@@ -87,3 +87,12 @@
 			&:hover
 				-web-kit-transform: scale(1.3)
 				transform: scale(1.3)
+		.nueve
+			background: url("../../img/nueve.png")
+			background-size: 400px 200px
+			background-position: center
+			background-repeat: no-repeat
+			transition: .5s
+			&:hover
+				-web-kit-transform: scale(1.3)
+				transform: scale(1.3)
