--- a/pportafolio/css/grid.css
+++ b/pportafolio/css/grid.css
@@ -4,9 +4,10 @@
 	grid-row-gap: 4rem;
 	width: 100%;
 	height: auto;
-	grid-template-areas: "uno dos tres cuatro"
-						 "cinco seis siete ocho";
-	grid-template-rows: repeat(2, 170px);
+	grid-template-areas: "uno 	dos  tres  cuatro"
+						 "cinco seis siete ocho"
+						 "nueve diez once  doce";
+	grid-template-rows: repeat(3, 170px);
 	grid-template-columns: repeat(4, 1fr);
 
 }
@@ -28,9 +29,10 @@
 		grid-template-areas: "uno    dos"
 						 	 "tres   cuatro"
 						 	 "cinco  seis"
-						 	 "siete  ocho";
+						 	 "siete  ocho"
+						 	 "nueve  diez";
 	    
-	    grid-template-rows: repeat(4, 300px);
+	    grid-template-rows: repeat(5, 300px);
 	    grid-template-columns: repeat(2, 50%);
 	    grid-row-gap: .7rem;
 	}
@@ -44,9 +46,10 @@
 						 	 "cinco"  
 						 	 "seis"
 						 	 "siete"
-						 	 "ocho";
+						 	 "ocho"
+						 	 "nueve";
 	    
-	    grid-template-rows: repeat(8, 250px);
+	    grid-template-rows: repeat(9, 250px);
 	    grid-template-columns: repeat(1, 1fr);
 	    grid-row-gap: .5rem;
 	}
