transition hover agregada

--- a/css/_seccion2.sass
+++ b/css/_seccion2.sass
@@ -25,6 +25,8 @@
 				-moz-box-shadow: 10px 10px 16px -6px rgba(0,0,0,0.43)
 				box-shadow: 10px 10px 16px -6px rgba(0,0,0,0.43)
 				border-radius: 4px
+				transition: .7s
+				cursor: pointer
 				&:hover
 					-webkit-box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
 					-moz-box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
@@ -55,6 +57,7 @@
 			-webkit-box-shadow: 10px 10px 16px -6px rgba(0,0,0,0.43)
 			-moz-box-shadow: 10px 10px 16px -6px rgba(0,0,0,0.43)
 			box-shadow: 10px 10px 16px -6px rgba(0,0,0,0.43)
+			transition: .7s
 			&:hover
 				background: rgba(20, 205, 155, 1)
 				color: rgba(255, 255, 255, 1)
