--- a/css/_seccion4.sass
+++ b/css/_seccion4.sass
@@ -62,6 +62,7 @@
 				-moz-box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
 				box-shadow: 15px 12px 16px -6px rgba(0,0,0,0.73)
 				border-radius: 4px 4px 4px 4px
+				transition: .7s
 				&:hover
 					-webkit-box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
 					-moz-box-shadow: 1px 1px 1px -6px rgba(0,0,0,0.73)
