--- a/css/_seccion1.sass
+++ b/css/_seccion1.sass
@@ -17,6 +17,7 @@
 				padding-top: 0rem
 				padding-bottom: 0rem
 				border-radius: 5px
+				transition: 1s
 				&:hover
 					border: solid 4px rgba(255, 255, 255, .0)
 					background: rgba(25, 155, 255, .4)
