--- a/css/estilos.css
+++ b/css/estilos.css
@@ -62,6 +62,7 @@
   padding-top: 0rem;
   padding-bottom: 0rem;
   border-radius: 5px;
+  transition: 1s;
 }
 .seccion1 div div .borde:hover {
   border: solid 4px rgba(255, 255, 255, 0);
@@ -102,6 +103,8 @@
   -moz-box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
   box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
   border-radius: 4px;
+  transition: 0.7s;
+  cursor: pointer;
 }
 .seccion2 div .simbols .bordes:hover {
   -webkit-box-shadow: 1px 1px 1px -6px rgba(0, 0, 0, 0.73);
@@ -136,6 +139,7 @@
   -webkit-box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
   -moz-box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
   box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.43);
+  transition: 0.7s;
 }
 .seccion2 div .contactanos:hover {
   background: #14cd9b;
@@ -269,6 +273,7 @@
   -moz-box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
   box-shadow: 15px 12px 16px -6px rgba(0, 0, 0, 0.73);
   border-radius: 4px 4px 4px 4px;
+  transition: 0.7s;
 }
 .seccion4 div .contactoT2 a:hover {
   -webkit-box-shadow: 1px 1px 1px -6px rgba(0, 0, 0, 0.73);
